--- a/Curiosidades.html
+++ b/Curiosidades.html
@@ -2,36 +2,46 @@
 <html lang="pt-br">
 
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title> Vih Sauthier</title>
-   <link rel="stylesheet" href="estilo.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title> Vih Sauthier</title>
+  <link rel="stylesheet" href="estilo.css">
 </head>
 
 <body>
-   <header>
-      <nav>
-         <ul>
-            <a href="index.html">Início</a>
-            <a href="./curriculo.html">Currículo</a>
-            <a href="./Curiosidades.html">Curiosidades</a>
-         </ul>
-      </nav>
-     </header>
-    
-    <main>
-    <div class="curiosidades">
-     <h1>Curiosidades</h1>
-    
-   </div>
-   <div class="auau">
-      <div class="fototexto">
-         <img src="foto6.jpg" height="400"  width="400">
-         <p>Animais são minha paixão.</p>
-      </div>
-      <div class="fototexto">
-         <img src="foto7.jpg" height="400" width="400">
-         <p>Adoro Conhecer novos Lugares.</p>
-      </div>
-   </div>
+  <header>
+    <nav>
+      <ul>
+        <a href="index.html">Início</a>
+        <a href="./curriculo.html">Currículo</a>
+        <a href="./Curiosidades.html">Curiosidades</a>
+      </ul>
+    </nav>
+  </header>
 
+  <main>
+    <div class="curiosidadesorganizacao">
+      <div class="frases">
+        <h1>Curiosidades</h1>
+        <p>♡Animais são minha paixão;</p>
+        <P></P>
+
+        <p>♡Adoro conhecer novos lugares;</p>
+        <p></p>
+
+        <p>♡Faço faculdade na Uniguaçu em São Miguel;</p>
+        <p></p>
+
+        <p>♡Feira Gestão e Sabor.</p>
+        <p></p>
+      </div>
+      <div class="retrato">
+        <img src="print.png" width="900" height="900">
+      </div>
+    </div>
+  </main>
+
+      <footer>
+     <p class="final">Desenvolvido por Vih Sauthier</p>
+     </footer>
+</body>
