Atualizacao do portfolio

--- a/Curiosidades.html
+++ b/Curiosidades.html
@@ -32,7 +32,7 @@
         <p>♡Faço faculdade na Uniguaçu em São Miguel;</p>
         <p></p>
 
-        <p>♡Feira Gestão e Sabor.</p>
+        <p>♡ Participei da Feira Gestão e Sabor.</p>
         <p></p>
       </div>
       <div class="retrato">
@@ -41,7 +41,7 @@
     </div>
   </main>
 
-      <footer>
-     <p class="final">Desenvolvido por Vih Sauthier</p>
-     </footer>
+  <footer>
+    <p class="final">Desenvolvido por Vih Sauthier</p>
+  </footer>
 </body>
